--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-.idea/
+.idea/    
+
+file vaye . bata start garne
 nachaine saab files like cache files haru yesma store hunxa
 __pycache__/
+venv/
